# transcrip-chan

./: .gitignore  LICENSE  README.md  main.spec  pyproject.toml
assets/: transcrip_chan.fbp
transcrip_chan/: main.py
transcrip_chan/ui/: user_interface.py
transcrip_chan/util/: fonts.py  theme.py
