[tool.poetry]
name = "transcrip-chan"
version = "0.1.0"
description = ""
authors = ["Satoshi Sashida"]
readme = "README.md"
packages = [{include = "transcrip_chan"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^6.3.0"
wxpython = "^4.2.1"
pywin32 = "^306"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
torch = "^2.2.0"
faster-whisper = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
